# k230-linux

./: .gitmodules  Makefile  README.md  beepy_fragment.cfg  debootstrap.Dockerfile  flash-resize-bootstrap.sh
buildroot-overlay/board/canaan/k230-soc/: linux.fragment  post-build.sh
buildroot-overlay/board/canaan/k230-soc/rootfs_overlay/etc/init.d/: rcS
buildroot-overlay/boot/uboot/u-boot-2022.10-overlay/: b.sh
buildroot-overlay/boot/uboot/u-boot-2022.10-overlay/arch/riscv/dts/: k230_canmv_01studio.dts
buildroot-overlay/boot/uboot/u-boot-2022.10-overlay/board/canaan/k230_canmv_01studio/: board.c
buildroot-overlay/configs/: BPI-CanMV-K230D-Zero_defconfig  BPI-CanMV-K230D-Zero_ilp32_defconfig  k230_canmv_01studio_defconfig  k230_canmv_defconfig  k230_canmv_dongshanpi_defconfig  k230_canmv_lckfb_defconfig  k230_canmv_v3_defconfig  k230_evb_defconfig  k230d_canmv_defconfig  k230d_canmv_ilp32_defconfig
buildroot-overlay/linux/: 0004-k230-dts-lckfb-sensor-and-display-modify.patch  0005-k230-dts-rtl8189fs-wifi.patch  cyberdeck-dts.patch  cyberdeck.dts.patch
buildroot-overlay/package/: Config.in  external.desc
buildroot-overlay/package/ai_demo/: build.sh
buildroot-overlay/package/aic8800/: aic8800.mk
buildroot-overlay/package/aic8800_sdio/: Config.in  Kconfig  aic8800.mk
buildroot-overlay/package/aic8800_sdio/src/: S100aic8800
buildroot-overlay/package/aic8800_sdio/src/aic8800_bsp/: Makefile  aic_bsp_driver.c  aic_bsp_main.c  rwnx_version_gen.h
buildroot-overlay/package/aic8800_sdio/src/aic8800_fdrv/: Makefile  rwnx_cmds.c  rwnx_main.c  rwnx_msg_tx.c
buildroot-overlay/package/audio_demo/: Makefile  audio_demo.mk
buildroot-overlay/package/audio_rec_play/: Config.in  Makefile  acap.c  acap.c-cacp-noaec  acap.c-loopback  acap.cc  acap.h  audio.pcm  audio_cfg.h  audio_enhance.c  audio_enhance.h  audio_improvement.c  audio_improvement.h  audio_rec_play.mk  capture_pcm.cc  main.c  main.cc---  play_pcm.cc  webrtc_audio_enhance.cc  webrtc_audio_improvement.cc  webrtc_audio_improvement.h
buildroot-overlay/package/camera_rtsp_demo/: Config.in  camera_rtsp_demo.mk
buildroot-overlay/package/camera_rtsp_demo/src/: Makefile  camera_rtsp_demo.cpp  camera_rtsp_demo.h  main.cpp  media.cpp  media.h
buildroot-overlay/package/helloworld_cmake/: Config.in  helloworldcmake.mk
buildroot-overlay/package/helloworld_cmake/src/: CMakeLists.txt  list_file.cpp  list_file.h  main.c
buildroot-overlay/package/k230_assistant/: CMakeLists.txt  README.md  build.sh
buildroot-overlay/package/k230_assistant/config/: config.json
buildroot-overlay/package/k230_assistant/libpeer/: CMakeLists.txt  build_lib.sh
buildroot-overlay/package/k230_assistant/libpeer/libpeer/: CMakeLists.txt
buildroot-overlay/package/k230_assistant/libpeer/libpeer/include/: config.h  rtp.h
buildroot-overlay/package/k230_assistant/libpeer/libpeer/src/: CMakeLists.txt  agent.c  buffer.c  dtls_srtp.c  peer_connection.c  rtp.c  socket.c
buildroot-overlay/package/k230_assistant/src/: CMakeLists.txt  get_pcm.cc  get_pcm.h  http.cc  http.h  llm_interface.h  main.cc  media.cc  media.h  openai.cc  play_pcm.cc  play_pcm.h  webrtc.cc  webrtc.h  webrtc_audio_improvement.cc
buildroot-overlay/package/librtsp_server/: Config.in  librtsp_server.mk
buildroot-overlay/package/librtsp_server/src/: BackChannelServerMediaSubsession.cpp  BackChannelServerMediaSubsession.h  Makefile  g711BackChannelServerMediaSubsession.cpp
buildroot-overlay/package/mvx_player/: mvx_player.mk
buildroot-overlay/package/mvx_player/src/: Makefile
buildroot-overlay/package/sharp-drm/: Config.in  sharp-drm.mk
buildroot-overlay/package/vvcam/: Config.in  vvcam.mk
buildroot-overlay/package/vvcam/mipi/: vvcam_mipi_driver.c  vvcam_mipi_driver.h
buildroot-overlay/package/vvcam/src/: gc2093.c
buildroot-overlay/package/vvcam/v4l2-drm/include/: v4l2-drm.h
buildroot-overlay/package/vvcam/v4l2-drm/src/: lib.c  main.c
buildroot-overlay/package/vvcam/v4l2/isp/: Makefile  vvcam_isp_driver.c  vvcam_isp_event.c  vvcam_isp_event.h
buildroot-overlay/package/vvcam/v4l2/video/: vvcam_video_register.c
buildroot-overlay/package/webrtc-audio-processing/: Config.in
tools/: ddr_test_img.sh
